tests/baselines/reference/contextualTypeForInitalizedVariablesFiltersUndefined.errors.txt
contextualTypeForInitalizedVariablesFiltersUndefined.ts(7,9): error TS2339: Property 's' does not exist on type '{ s: string; } | undefined'.
contextualTypeForInitalizedVariablesFiltersUndefined.ts(7,15): error TS18048: 't' is possibly 'undefined'.
contextualTypeForInitalizedVariablesFiltersUndefined.ts(8,16): error TS2339: Property 's' does not exist on type '{ s: string; } | undefined'.
contextualTypeForInitalizedVariablesFiltersUndefined.ts(8,22): error TS18048: 't' is possibly 'undefined'.


==== contextualTypeForInitalizedVariablesFiltersUndefined.ts (4 errors) ====
    const fInferred = ({ a = 0 } = {}) => a;
    // const fInferred: ({ a }?: { a?: number; }) => number
    
    const fAnnotated: typeof fInferred = ({ a = 0 } = {}) => a;
    
    declare var t: { s: string } | undefined;
    const { s } = t;
            ~
!!! error TS2339: Property 's' does not exist on type '{ s: string; } | undefined'.
                  ~
!!! error TS18048: 't' is possibly 'undefined'.
    function fst({ s } = t) { }
                   ~
!!! error TS2339: Property 's' does not exist on type '{ s: string; } | undefined'.
                         ~
!!! error TS18048: 't' is possibly 'undefined'.
    